--- a/kubernetes/environment.yaml
+++ b/kubernetes/environment.yaml
@@ -44,7 +44,7 @@ nodes:
       Node_WSPort: 8546
       NodeP2P_DiscoveryAddr: 30303
       Dashboard_Port: 8080
-      Dashboard_Refresh: 3000000000
+      Refresh: 3000000000
 - miner03:
     k8s:
       replicas: 1
@@ -93,10 +93,10 @@ keystore:
     "0x2da602397dbcd7b3f3efec474124746e8e913c44": UTC--2019-06-04T13-53-00.073235074Z--2da602397dbcd7b3f3efec474124746e8e913c44
     "0x1e2510200cc63faf248150530d16415a52757f50": UTC--2019-06-04T13-53-06.513321284Z--1e2510200cc63faf248150530d16415a52757f50
 geth:
-  version: v1.9.0
+  version: latest
   network:
-    id: 123456
-    period: 15
+    id: 451998
+    period: 5
     verbosity: 3
     epoch: 30000
     nonce: "0x0"
