--- a/kubernetes/yaml/02_bootnodes.yaml
+++ b/kubernetes/yaml/02_bootnodes.yaml
@@ -43,7 +43,7 @@ metadata:
 data:
   gethconfig: |-
     [Eth]
-    NetworkId = 123456
+    NetworkId = 451998
     SyncMode = "full"
     LightPeers = 100
     DatabaseCache = 768
@@ -75,10 +75,6 @@ data:
     Blocks = 20
     Percentile = 60
     
-    [Shh]
-    MaxMessageSize = 1048576
-    MinimumAcceptedPOW = 2e-01
-    
     [Node]
     UserIdent = "bootnode"
     DataDir = "/etc/testnet/bootnode"
@@ -102,11 +98,6 @@ data:
     TrustedNodes = []
     ListenAddr = ":30303"
     EnableMsgEvents = false
-    
-    [Dashboard]
-    Host = "0.0.0.0"
-    Port = 8080
-    Refresh = 3000000000
 
 ---
 apiVersion: v1
@@ -123,15 +114,14 @@ spec:
     app: bootnode
     tier: backend
     name: bootnode
-  type: LoadBalancer
-  externalTrafficPolicy: Cluster
+  type: ClusterIP
   ports:
     - name: geth-bootnode-ipc-discovery
       protocol: UDP
       port: 30303
       targetPort: 30303
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   namespace: default
@@ -140,6 +130,9 @@ metadata:
     app: bootnode
     name: bootnode-setup-pod
 spec:
+  selector:
+    matchLabels:
+      app: bootnode
   template:
     metadata:
       labels:
@@ -148,7 +141,7 @@ spec:
     spec:
       containers:
       - name: geth-boot-node-setup-container
-        image: ijsfd/geth-node:alltools-v1.9.0
+        image: ethereum/client-go:alltools-latest
         imagePullPolicy: IfNotPresent
         command: [ "sh" ]
         args:
@@ -156,7 +149,7 @@ spec:
         - "cd /etc/testnet/bootnode;
            echo \"091bd6067cb4612df85d9c1ff85cc47f259ced4d4cd99816b14f35650f59c322\" > nodekeyhex;
            cat nodekeyhex;
-           echo \"enode://$(/usr/local/bin/bootnode -nodekey nodekeyhex -writeaddress)@$GETH_BOOTNODE_SVC_SERVICE_HOST:30303\" > enode.address;
+           echo \"enode://$(/usr/local/bin/bootnode -nodekey nodekeyhex -writeaddress)@$GETH_BOOTNODE_SVC_SERVICE_HOST:0?discport=30303\" > enode.address;
            set +x;
            while true; do :; done;"
         volumeMounts:
@@ -192,7 +185,7 @@ spec:
     spec:
       containers:
       - name: geth-bootnode-container
-        image: ijsfd/geth-node:alltools-v1.9.0
+        image: ethereum/client-go:alltools-latest
         imagePullPolicy: IfNotPresent
         command: [ "sh" ]
         args:
@@ -206,7 +199,7 @@ spec:
           /usr/local/bin/geth \
           --verbosity 3  \
           --nodekey /etc/testnet/bootnode/nodekeyhex \
-          --unlock 0x1e2510200cc63faf248150530d16415a52757f50 --allow-insecure-unlock --password /etc/testnet/bootnode/password.txt --gasprice '0x0' --targetgaslimit '9000000000000' \
+          --unlock 0x1e2510200cc63faf248150530d16415a52757f50 --allow-insecure-unlock --password /etc/testnet/bootnode/password.txt --mine --miner.gasprice '0x0' --miner.gaslimit '9000000000000' \
           --config /etc/geth/bootnode/gethconfig.toml;"
         volumeMounts:
         - name: bootnode-persistent-storage
